# phormatics

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
server/: app.py
server/static/trainer/: main.js
