[tool.poetry]
name = "phormatics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.5"
Flask-Cors = "^3.0.10"
numpy = "^1.18.5"
tensorflow = "1.6.0"
scipy = "1.1.0"
imutils = "^0.5.4"
opencv-python = "^4.3.0"
Flask = "^1.1.2"
Pillow = "7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
